--- a/src/templates/tweak.html
+++ b/src/templates/tweak.html
@@ -1,13 +1,27 @@
     <!doctype html>
     <title>Web Tweaker</title>
-    <h1>Convert 3mf or binary stl file to ascii stl</h1>
+    <h1>Upload a 3mf or stl file.</h1>
     <form action="" method="POST" enctype="multipart/form-data">
-      <p><input type="file" name="file2convert"></p>
-      <input type="submit" value="Submit">
-    </form>
+      <p><input type="file" name="file"></p>
+        Choose what to do with the file:
+        <br>
+    <input type="radio" value="Tweak" name="command" checked="checked"> Tweak
+        <br>
+    <input type="radio" value="extendedTweak" name="command"> extended Tweak
+        <br>
+    <input type="radio" value="extendedTweakVol" name="command"> extended Tweak to minimize Printing Material
+        <br>
+<!--    <input type="radio" value="extendedTweakVol" name="command"> extended Tweak Designer Mode
+        <br> -->
+    <input type="radio" value="Convert" name="command"> Convert
+        <br>
+        Choose the output
+        <br>
+    <input type="radio" value="binary STL" name="output" checked="checked"> binary STL
+        <br>
+    <input type="radio" value="ascii STL" name="output"> ascii STL
 
-    <h1>Tweak stl or 3mf file for optimal print</h1>
-    <form action="" method="POST" enctype="multipart/form-data">
-      <p><input type="file" name="file2tweak"></p>
+    <br>
+
       <input type="submit" value="Submit">
     </form>
