Send model and profile to PrePrintServer and get a gcode as response back to octoprint using the slicing API

--- a/src/templates/tweak_slice.html
+++ b/src/templates/tweak_slice.html
@@ -5,13 +5,13 @@
       <p><input type="file" name="file"></p>
         Choose what to do with the file:
         <br>
-    <input type="radio" value="Convert" name="command"> Nothing
+    <input type="radio" value="Convert" name="tweak_option"> Nothing
         <br>
-    <input type="radio" value="Tweak" name="command"> Tweak
+    <input type="radio" value="Tweak" name="tweak_option"> Tweak
         <br>
-    <input type="radio" value="extendedTweak" name="command" checked="checked"> extended Tweak
+    <input type="radio" value="extendedTweak" name="tweak_option" checked="checked"> extended Tweak
         <br>
-    <input type="radio" value="extendedTweakVol" name="command"> extended Tweak to minimize Printing Material
+    <input type="radio" value="extendedTweakVol" name="tweak_option"> extended Tweak to minimize Printing Material
         <br>
         <br>
         Choose the profile
