Workflow for model and profile is okay

--- a/src/templates/tweak_slice.html
+++ b/src/templates/tweak_slice.html
@@ -2,7 +2,7 @@
     <title>Web Tweaker</title>
     <h1>Upload a 3mf or stl file.</h1>
     <form action="" method="POST" enctype="multipart/form-data">
-      <p><input type="file" name="file"></p>
+      <p><input type="file" name="model"></p>
         Choose what to do with the file:
         <br>
     <input type="radio" value="Convert" name="tweak_option"> Nothing
