update to latest version, fixed bugs issued in https://github.com/ChristophSchranz/Octoprint-PrePrintService/issues

--- a/preprintservice_src/templates/tweak_slice.html
+++ b/preprintservice_src/templates/tweak_slice.html
@@ -7,11 +7,11 @@
         <br>
     <input type="radio" value="Convert" name="tweak_option"> Nothing
         <br>
-    <input type="radio" value="Tweak" name="tweak_option"> Tweak
+    <input type="radio" value="Tweak" name="tweak_option"> Simple Tweak
         <br>
-    <input type="radio" value="extendedTweak" name="tweak_option" checked="checked"> extended Tweak
+    <input type="radio" value="extendedTweak" name="tweak_option" checked="checked"> extended Tweak, minimize support surface
         <br>
-    <input type="radio" value="extendedTweakVol" name="tweak_option"> extended Tweak to minimize Printing Material
+    <input type="radio" value="extendedTweakVol" name="tweak_option"> extended Tweak, minimize support volume (recommended)
         <br>
         <br>
         Choose the profile
